ADD: detail fragment data binding; navigation from favorite to detail screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="empty_repo_desc">No description available</string>
     <string name="owner_name">Owner: %1$s </string>
     <string name="lang">Language: %1$s </string>
-    <string name="forks">Forks: %1$s </string>
+    <string name="forks">Forks: %1$d </string>
     <string name="created">Created: %1$s </string>
 </resources>
